Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/

Done for version 2.13.0 (released ??/10/2020):
  Fixed
     1- sizebyte(objects containing t_LIST): would assign size 3 to all lists
     2- [Map(Mat([0, 0])), [0, 0, 1]] -> SEGV

  Added
     1- examples/pari.f90: example FORTRAN binding
     2- [libpari] quodif

Done for version 2.12.1 (released 16/09/2020):
  Fixed
BA   1- plotlines flag was ignored
     2- fileopen(,"w" or "a") was bypassing the check for 'secure' default
     3- bug in idealismaximal: K=nfinit(y^2+7); idealismaximal(K,[11,7;0,1])->0
     4- bnfcertify did not certify correctly its argument when DEBUGLEVEL > 1
        (\g 2 and above) and the computed class group was trivial (introduced
        in 2002, commit d3d44841). The code was correct at \g1 or \g0, and in
        all cases if the computed class group was non-trivial.
     5- nfdiscfactors(nfinit([x^2+1, [1,x]])) -> wrong result (didn't support
        inputs from nfinit([T, integer basis]))
     6- nfinit(rnf) would produce a broken nf (not supporting
        nf_get_ramified_primes)
     7- [mf,F] = mffromqf([2,0;0,2]); L=lfunmf(mf,F) => wrong values
     8- t=mfTheta();mfslashexpansion(mfinit(t),t,[0,1;-1,0],1,1) -> error
     9- poldisc(x^4 + 8/y*x) -> type error in Q_divi_to_int [#2157]
    10- T=mfTheta(); mfeval(mfinit(T),T,I/10) -> wrong sign
    11- mfslashexpansion(mf,F,huge matrix,...) -> overflow
    12- mf=mfinit([470,2],0);F=mfeigenbasis(mf)[7]; mfcuspval(mf,F,1/5)
        -> division by 0
    13- quadtofp(quadgen(-3)) -> t_FRAC component [#2158]
    14- [from 2.12.0] nfgcd wouldn't terminate [#2159]
    15- conjvec(t_FFELT of characteristic 2) was missing a conjugate
    16- nf2 = nfnewprec(nf) could return incompatible nf2 [#2154]
    17- [from 2.12.0] u_forprime_next around 2^63 could return primes larger
        than upper bound
    18- [from 2.12.0] gcd(2*x, 2*x+1) -> 2 [instead of 1]